crates/cuda-macros/tests/compile_fail/ptx_asm_unsupported_constraint.stderr
error: unsupported `in` constraint `C`; expected one of ["h", "r", "l", "q", "f", "d", "n"]
  --> tests/compile_fail/ptx_asm_unsupported_constraint.rs:14:16
   |
14 |             in("C") x,
   |                ^^^
